新增了"关于我"页面中的“我的项目”的内容

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -1,4 +1,5 @@
 <style type="text/css">
+    /* don't remove. */
     .about-cover {
         height: 80vh;
     }
@@ -37,6 +38,9 @@
                 </div>
 
                 <div class="introduction center-align"><%= theme.profile.introduction %></div>
+
+                <%- partial('_widget/my-projects') %>
+
             </div>
         </div>
     </div>
