--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="card-content">
                 <div class="row">
-                    <div class="post-statis col l4 hide-on-med-and-down">
+                    <div class="post-statis col l4 hide-on-med-and-down" data-aos="zoom-in-right">
                         <%- partial('_partial/post-statis') %>
                     </div>
                     <div class="col s12 m12 l4">
@@ -23,14 +23,18 @@
                                      class="circle responsive-img avatar-img">
                             </div>
                             <div class="author">
-                                <div class="post-statis hide-on-large-only"><%- partial('_partial/post-statis') %></div>
+                                <div class="post-statis hide-on-large-only" data-aos="zoom-in-right">
+                                    <%- partial('_partial/post-statis') %>
+                                </div>
                                 <div class="title"><%- config.author %></div>
                                 <div class="career"><%- theme.profile.career %></div>
-                                <div class="social-link hide-on-large-only"><%- partial('_partial/social-link') %></div>
+                                <div class="social-link hide-on-large-only" data-aos="zoom-in-left">
+                                    <%- partial('_partial/social-link') %>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col l4 hide-on-med-and-down">
+                    <div class="col l4 hide-on-med-and-down" data-aos="zoom-in-left">
                         <div class="social-link">
                             <%- partial('_partial/social-link') %>
                         </div>
@@ -39,7 +43,13 @@
 
                 <div class="introduction center-align"><%= theme.profile.introduction %></div>
 
+                <% if (theme.myProjects && theme.myProjects.enable) { %>
                 <%- partial('_widget/my-projects') %>
+                <% } %>
+
+                <% if (theme.mySkills && theme.mySkills.enable) { %>
+                <%- partial('_widget/my-skills') %>
+                <% } %>
 
             </div>
         </div>
