新增“关于我”页面的“其他技能”内容

--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="introduction center-align"><%= theme.profile.introduction %></div>
+                <div class="introduction center-align" data-aos="fade-up"><%= theme.profile.introduction %></div>
 
                 <% if (theme.myProjects && theme.myProjects.enable) { %>
                 <%- partial('_widget/my-projects') %>
