--- a/layout/about.ejs
+++ b/layout/about.ejs
@@ -51,6 +51,10 @@
                 <%- partial('_widget/my-skills') %>
                 <% } %>
 
+                <% if (theme.myGallery && theme.myGallery.enable) { %>
+                <%- partial('_widget/my-gallery') %>
+                <% } %>
+
             </div>
         </div>
     </div>
