--- a/layout/_widget/my-projects.ejs
+++ b/layout/_widget/my-projects.ejs
@@ -3,7 +3,7 @@
 var myprojects = theme.myProjects.data;
 %>
 <div class="my-projects">
-    <div class="title center-align" data-aos="zoom-in"><%- __('myProjects') %></div>
+    <div class="title center-align" data-aos="zoom-in-up"><%- __('myProjects') %></div>
     <div class="row">
         <% if (myprojects) { %>
         <% Object.keys(myprojects).forEach(function(project) { %>
