新增“关于”页面中文章相关“统计图”的示例内容

--- a/layout/_widget/my-gallery.ejs
+++ b/layout/_widget/my-gallery.ejs
@@ -1,5 +1,5 @@
 <%
-// the projects information of theme _config.yml.
+// the gallery photos of theme _config.yml.
 var gallery = theme.myGallery.data;
 %>
 <div id="myGallery" class="my-gallery">
