--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1050,6 +1050,18 @@ table tr:nth-child(2n), thead {
 
 /* about page styles. */
 
+.about-container {
+    width: 90%;
+    max-width: 1225px;
+    margin-top: -60px;
+}
+
+@media only screen and (max-width: 601px) {
+    .about-container {
+        width: 95%;
+    }
+}
+
 .post-statis {
     text-align: center;
 }
@@ -1134,19 +1146,25 @@ table tr:nth-child(2n), thead {
     color: #999;
 }
 
+.post-charts,
 .my-projects,
-.my-skills {
-    padding: 4rem 1.5rem 1rem 1.5rem;
+.my-skills,
+.post-charts {
+    padding: 3.8rem 1.5rem 0.8rem 1.5rem;
 }
 
-.my-projects .title {
-    font-size: 2.25rem;
+.post-charts, .title,
+.my-projects .title,
+.my-skills .title,
+.my-gallery .title {
+    font-size: 2rem;
+    margin-bottom: 2.25rem;
 }
 
 .my-projects .info {
     max-width: 360px;
     margin: 0 auto;
-    padding: 40px 0 30px;
+    padding: 1rem 0 1rem;
 }
 
 .my-projects .info .icon {
@@ -1175,11 +1193,6 @@ table tr:nth-child(2n), thead {
     margin: 0 0 10px;
     font-size: 0.9rem;
     color: #999;
-}
-
-.my-skills .title {
-    font-size: 2.25rem;
-    margin-bottom: 3rem;
 }
 
 .my-skills .skillbar {
@@ -1271,12 +1284,7 @@ table tr:nth-child(2n), thead {
 .my-gallery {
     margin: 4.5rem auto 1rem;
     padding: 0 1.2rem;
-    max-width: 1000px;
-}
-
-.my-gallery .title {
-    margin-bottom: 2rem;
-    font-size: 2.25rem;
+    max-width: 1100px;
 }
 
 .my-gallery .photo {
