--- a/layout/_widget/post-charts.ejs
+++ b/layout/_widget/post-charts.ejs
@@ -28,120 +28,147 @@
 
 <script type="text/javascript" src="/libs/echarts/echarts.min.js"></script>
 <script>
-let postsChart = echarts.init(document.getElementById('posts-chart'));
-let categoriesChart = echarts.init(document.getElementById('categories-chart'));
-let tagsChart = echarts.init(document.getElementById('tags-chart'));
+    let postsChart = echarts.init(document.getElementById('posts-chart'));
+    let categoriesChart = echarts.init(document.getElementById('categories-chart'));
+    let tagsChart = echarts.init(document.getElementById('tags-chart'));
 
-let postsOption = {
-    title: {
-        text: '文章发布统计图',
-        top: -5,
-        x: 'center'
-    },
-    tooltip: {
-        trigger: 'axis'
-    },
-    xAxis:  {
-        type: 'category',
-        data: ['2017-10', '2017-11', '2017-12', '2018-01', '2018-02', '2018-03', '2018-04', '2018-05', '2018-06', '2018-07', '2018-08', '2018-09', '2018-10']
-    },
-    yAxis: {
-        type: 'value',
-    },
-    series: [
-        {
-            name:'文章篇数',
-            type:'line',
-            data:[1, 4, 2, 5, 0, 2, 3, 4, 2, 1, 6, 4, 2],
-            markPoint: {
-                symbolSize: 45,
-                data : [
-                    {type : 'max', name: '最大值'},
-                    {type : 'min', name: '最小值'}
-                ]
-            },
-            markLine : {
-                data : [
-                    {type : 'average', name: '平均值'}
-                ]
-            }
+    <%
+    /* calculate postsOption data. */
+    var startDate = moment().subtract(1, 'years').startOf('month');
+    var endDate = moment().endOf('month');
+
+    var monthMap = new Map();
+    var dayTime = 3600 * 24 * 1000;
+    for (var time = startDate; time <= endDate; time += dayTime) {
+        var month = moment(time).format('YYYY-MM');
+        if (!monthMap.has(month)) {
+            monthMap.set(month, 0);
         }
-    ]
-};
+    }
 
-let categoriesOption = {
-    title : {
-        text: '文章分类统计图',
-        top: -4,
-        x:'center'
-    },
-    tooltip : {
-        trigger: 'item',
-        formatter: "{a} <br/>{b} : {c} ({d}%)"
-    },
-    series : [
-        {
-            name: '文章分类',
-            type: 'pie',
-            radius : '50%',
-            data:[
-                {value:335, name:'前端'},
-                {value:310, name:'后端'},
-                {value:234, name:'软件设计'},
-                {value:135, name:'软件工具'},
-                {value:1548, name:'其他'}
-            ],
-            itemStyle: {
-                emphasis: {
-                    shadowBlur: 10,
-                    shadowOffsetX: 0,
-                    shadowColor: 'rgba(0, 0, 0, 0.5)'
+    // post and count map.
+    site.posts.forEach(function (post) {
+        var month = post.date.format('YYYY-MM');
+        if (monthMap.has(month)) {
+            monthMap.set(month, monthMap.get(month) + 1);
+        }
+    });
+
+    // xAxis data and yAxis data.
+    var monthArr = JSON.stringify([...monthMap.keys()]);
+    var monthValueArr = JSON.stringify([...monthMap.values()]);
+    %>
+
+    let postsOption = {
+        title: {
+            text: '<%- __("postPublishChart")  %>',
+            top: -5,
+            x: 'center'
+        },
+        tooltip: {
+            trigger: 'axis'
+        },
+        xAxis: {
+            type: 'category',
+            data: <%- monthArr %>
+        },
+        yAxis: {
+            type: 'value',
+        },
+        series: [
+            {
+                name: '<%- __("postsNumberName")  %>',
+                type: 'line',
+                data: <%- monthValueArr %>,
+                markPoint: {
+                    symbolSize: 45,
+                    data: [
+                        {type: 'max', name: '<%- __("maximum")  %>'},
+                        {type: 'min', name: '<%- __("minimum")  %>'}
+                    ]
+                },
+                markLine: {
+                    data: [
+                        {type: 'average', name: '<%- __("average")  %>'}
+                    ]
                 }
             }
-        }
-    ]
-};
+        ]
+    };
 
-
-let tagsOption = {
-    title : {
-        text: 'TOP10 标签统计图',
-        top: -5,
-        x: 'center'
-    },
-    tooltip : {},
-    xAxis : [
-        {
-            type : 'category',
-            data : ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月']
-        }
-    ],
-    yAxis : [
-        {
-            type : 'value'
-        }
-    ],
-    series : [
-        {
-            type:'bar',
-            data:[2.6, 5.9, 9.0, 26.4, 28.7, 70.7, 175.6, 182.2, 48.7, 18.8],
-            markPoint : {
-                symbolSize: 45,
-                data : [
-                    {type : 'max', name: '最大值'},
-                    {type : 'min', name: '最小值'}
+    let categoriesOption = {
+        title: {
+            text: '文章分类统计图',
+            top: -4,
+            x: 'center'
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c} ({d}%)"
+        },
+        series: [
+            {
+                name: '文章分类',
+                type: 'pie',
+                radius: '50%',
+                data: [
+                    {value: 335, name: '前端'},
+                    {value: 310, name: '后端'},
+                    {value: 234, name: '软件设计'},
+                    {value: 135, name: '软件工具'},
+                    {value: 1548, name: '其他'}
                 ],
-            },
-            markLine : {
-                data : [
-                    {type : 'average', name : '平均值'}
-                ]
+                itemStyle: {
+                    emphasis: {
+                        shadowBlur: 10,
+                        shadowOffsetX: 0,
+                        shadowColor: 'rgba(0, 0, 0, 0.5)'
+                    }
+                }
             }
-        }
-    ]
-};
+        ]
+    };
 
-postsChart.setOption(postsOption);
-categoriesChart.setOption(categoriesOption);
-tagsChart.setOption(tagsOption);
+
+    let tagsOption = {
+        title: {
+            text: 'TOP10 标签统计图',
+            top: -5,
+            x: 'center'
+        },
+        tooltip: {},
+        xAxis: [
+            {
+                type: 'category',
+                data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月']
+            }
+        ],
+        yAxis: [
+            {
+                type: 'value'
+            }
+        ],
+        series: [
+            {
+                type: 'bar',
+                data: [2.6, 5.9, 9.0, 26.4, 28.7, 70.7, 175.6, 182.2, 48.7, 18.8],
+                markPoint: {
+                    symbolSize: 45,
+                    data: [
+                        {type: 'max', name: '最大值'},
+                        {type: 'min', name: '最小值'}
+                    ],
+                },
+                markLine: {
+                    data: [
+                        {type: 'average', name: '平均值'}
+                    ]
+                }
+            }
+        ]
+    };
+
+    postsChart.setOption(postsOption);
+    categoriesChart.setOption(categoriesOption);
+    tagsChart.setOption(tagsOption);
 </script>
