--- a/source/css/github-link.css
+++ b/source/css/github-link.css
@@ -1,20 +1,21 @@
 svg {
     color: #fff;
-    fill: var(--theme-color, #4CD964);
+    fill: var(--theme-color, #0f9d58);
     height: 80px;
     width: 80px;
+    transform: rotate(-45deg);
 }
 
 .nav-transparent .github-corner {
-    opacity: 0 !important;
+    display: none !important;
 }
 
 .github-corner {
     position: absolute;
     z-index: 10000000;
-    top: -12px;
+    top: 10px;
     right: -8px;
-    transform: scale(.8);
+    transform: scale(1.1);
 }
 
 .github-corner:hover .octo-arm {
@@ -26,17 +27,14 @@ svg {
 }
 
 @keyframes a {
-
     0%,
     to {
         transform: rotate(0);
     }
-
     20%,
     60% {
         transform: rotate(-25deg);
     }
-
     40%,
     80% {
         transform: rotate(10deg);
