--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -24,7 +24,7 @@
         <li><div class="divider"></div></li>
         <li>
             <a href="<%= theme.githubLink.link %> %>" class="waves-effect waves-light">
-                <i class="fa  fa fa-github fa-lg fa-fw"></i><%= theme.githubLink.title %>
+                <i class="fa  fa fa-github fa-lg fa-fw"></i>Fork Me
             </a>
         </li>
         <% } %>
