完善了Fork me on Github的相关功能和README

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -13,7 +13,8 @@
                 <%- partial('_partial/navigation') %>
             </div>
         </div>
-        <% if (theme.githubLink.enable) { %>
+
+        <% if (theme.githubLink && theme.githubLink.enable) { %>
         <%- partial('_partial/github-link') %>
         <% } %>
     </nav>
