关于TOC功能的细节样式修改

--- a/layout/_partial/github-link.ejs
+++ b/layout/_partial/github-link.ejs
@@ -1,7 +1,7 @@
 <style>
     svg {
         color: #fff;
-        fill: var(--theme-color, #0f9d58);
+        fill: #0f9d58;
         height: 60px;
         width: 60px;
         transform: rotate(-45deg);
