完善打赏功能和README说明

--- a/layout/_partial/reward.ejs
+++ b/layout/_partial/reward.ejs
@@ -12,23 +12,68 @@
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2), 0 5px 15px rgba(0, 0, 0, 0.2);
     }
 
+    #rewardModal {
+        width: 320px;
+        height: 350px;
+    }
+
+    #rewardModal .reward-title {
+        margin: 15px auto;
+        padding-bottom: 5px;
+    }
+
+    #rewardModal .modal-content {
+        padding: 10px;
+    }
+
     #rewardModal .close {
         position: absolute;
         right: 15px;
         top: 15px;
-        color: rgba(0, 0, 0, 0.2);
-        font-size: 16px;
+        color: rgba(0, 0, 0, 0.5);
+        font-size: 1.3rem;
         line-height: 20px;
         cursor: pointer;
     }
 
     #rewardModal .reward-tabs {
         margin: 0 auto;
-        width: 250px;
+        width: 210px;
     }
 
     .reward-tabs .tabs {
-        margin: 20px auto;
+        height: 38px;
+        margin: 10px auto;
+        padding-left: 0;
+    }
+
+    .reward-tabs .tabs .tab {
+        height: 38px;
+        line-height: 38px;
+    }
+
+    .reward-tabs .tab a {
+        color: #fff;
+        background-color: #ccc;
+    }
+
+    .reward-tabs .tab a:hover {
+        color: #fff;
+    }
+
+    .reward-tabs .wechat-tab .active {
+        color: #fff;
+        background-color: #22AB38;
+    }
+
+    .reward-tabs .alipay-tab .active {
+        color: #fff;
+        background-color: #019FE8;
+    }
+
+    .reward-tabs .reward-img {
+        width: 210px;
+        height: 210px;
     }
 </style>
 
@@ -39,18 +84,18 @@
     <div id="rewardModal" class="modal">
         <div class="modal-content">
             <a class="close"><i class="fa fa-close"></i></a>
-            <h3 class="reward-title">小小的打赏</h3>
+            <h4 class="reward-title"><%- theme.reward.title %></h4>
             <div class="reward-content">
                 <div class="reward-tabs">
                     <ul class="tabs">
-                        <li class="tab"><a class="active" href="#wechat">微信</a></li>
-                        <li class="tab"><a href="#alipay">支付宝</a></li>
+                        <li class="tab wechat-tab waves-effect waves-light"><a class="active" href="#wechat">微信</a></li>
+                        <li class="tab alipay-tab waves-effect waves-light"><a href="#alipay">支付宝</a></li>
                     </ul>
                     <div id="wechat">
-                        <img src="<%- theme.reward.wechat %>" alt="微信打赏二维码">
+                        <img src="<%- theme.reward.wechat %>" class="reward-img" alt="微信打赏二维码">
                     </div>
                     <div id="alipay">
-                        <img src="<%- theme.reward.alipay %>" alt="支付宝打赏二维码">
+                        <img src="<%- theme.reward.alipay %>" class="reward-img" alt="支付宝打赏二维码">
                     </div>
                 </div>
             </div>
