修复Github corner 导致部分svg旋转了45度的问题

--- a/layout/_partial/github-link.ejs
+++ b/layout/_partial/github-link.ejs
@@ -1,12 +1,4 @@
 <style>
-    svg {
-        color: #fff;
-        fill: #0f9d58;
-        height: 60px;
-        width: 60px;
-        transform: rotate(-45deg);
-    }
-
     .nav-transparent .github-corner {
         display: none !important;
     }
@@ -17,6 +9,14 @@
         top: 12px;
         right: 0;
         transform: scale(1);
+    }
+
+    .github-corner svg {
+        color: #fff;
+        fill: #0f9d58;
+        height: 60px;
+        width: 60px;
+        transform: rotate(-45deg);
     }
 
     .github-corner:hover .octo-arm {
