--- a/layout/_widget/recommend.ejs
+++ b/layout/_widget/recommend.ejs
@@ -1,10 +1,93 @@
+<%
+    // get all top posts.
+    var topPosts = [];
+    site.posts.forEach(function (post) {
+        if (post.top) {
+            topPosts.push(post);
+        }
+    });
+    var topPostsCount = topPosts.length;
+%>
+
+<% if (topPostsCount > 0) { %>
+<%
+    var hashCode = function (str) {
+        if (!str && str.length === 0) {
+            return 0;
+        }
+
+        var hash = 0;
+        for (var i = 0, len = str.length; i < len; i++) {
+            hash = ((hash << 5) - hash) + str.charCodeAt(i);
+            hash |= 0;
+        }
+        return hash;
+    };
+
+    var featureImages = theme.featureImages;
+    var imgCount = featureImages.length;
+%>
 <div class="container recommend">
     <div class="card">
         <div class="card-content">
-            这是推荐的内容，待开发...<br><br><br>
-            这是推荐的内容,待开发...<br><br><br>
-            这是推荐的内容,待开发...<br><br>
-            这是推荐的内容,待开发...<br><br><br>
+            <div class="title"><%- __('recommendedPosts') %></div>
+            <div class="row">
+                <% if (topPostsCount % 2 === 0) { %>
+                <% for (var i = 0; i < topPostsCount; i++) { %>
+                <%
+                    var post = topPosts[i];
+                    var featureImg = post.img ? post.img : featureImages[Math.abs(hashCode(post.title) % imgCount)];
+                %>
+                <div class="col s12 m6">
+                    <div class="post-card" style="background-image: url('<%- featureImg %>')">
+                        <div class="post-body">
+                            <div class="post-categories">
+                                <% post.categories.forEach(category => { %>
+                                <a href="<%- url_for(category.path) %>" class="category" target="_blank"><%- category.name %></a>
+                                <% }); %>
+                            </div>
+                            <a href="<%- url_for(post.path) %>" target="_blank">
+                                <h3 class="post-title"><%- post.title %></h3>
+                            </a>
+                            <p class="post-description"><%- strip_html(post.content).substring(0, 60) %></p>
+                            <a href="<%- url_for(post.path) %>" class="read-more btn waves-effect waves-light" target="_blank">
+                                <i class="icon fa fa-eye fa-fw"></i><%- __('readMore') %>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+                <% } else { %>
+                <% for (var i = 0; i < topPostsCount; i++) { %>
+                <%
+                    var post = topPosts[i];
+                    var grid = (i % 3 === 0) ? 's12' : 's12 m6';
+                    var description = (i % 3 === 0) ? strip_html(post.content).substring(0, 120)
+                            : strip_html(post.content).substring(0, 70);
+                    var featureImg = post.img ? post.img : featureImages[Math.abs(hashCode(post.title) % imgCount)];
+                %>
+                <div class="col <%- grid %>">
+                    <div class="post-card" style="background-image: url('<%- featureImg %>')">
+                        <div class="post-body">
+                            <div class="post-categories">
+                                <% post.categories.forEach(category => { %>
+                                <a href="<%- url_for(category.path) %>" class="category" target="_blank"><%- category.name %></a>
+                                <% }); %>
+                            </div>
+                            <a href="<%- url_for(post.path) %>" target="_blank">
+                                <h3 class="post-title"><%- post.title %></h3>
+                            </a>
+                            <p class="post-description"><%- description %></p>
+                            <a href="<%- url_for(post.path) %>" class="read-more btn waves-effect waves-light" target="_blank">
+                                <i class="icon fa fa-eye fa-fw"></i><%- __('readMore') %>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+                <% } %>
+            </div>
         </div>
     </div>
 </div>
+<% } %>
